[package]
name = "image-analytics-bridge"
version = "0.1.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
license = "MIT"
travis-ci = { repository = "thuetz/image-analytics-bridge", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
simplelog = "0.5.3"
dirs = "1.0.5"
clap = {version = "2.33.0", features = ["yaml"]}
rusoto_core = "0.39.0"
rusoto_s3 = "0.39.0"
rusoto_rekognition = "0.39.0"
